...
    Card(
        elevation = 5.dp,
        shape = RoundedCornerShape(2.dp),
        modifier = Modifier
            .fillMaxWidth()
            .wrapContentHeight()
            .testTag("home_col_question_card"),
        onClick = { scope.launch { openElectionInfo(item) } },
    ) {
        Column(
            verticalArrangement = Arrangement.SpaceBetween,
            modifier = Modifier.background(colorResource(id = R.color.white))
        ) {
...
                        tint = colorResource(
                            id = R.color.yellow_800
                        ),
                        modifier = Modifier
                            .size(30.dp)
                            .padding(start = 10.dp)
                            .testTag("home_col_question_card_winning_icon")
                    )
                }
                Text(
                    text = getOptionName(item),
                    style = MaterialTheme.typography.subtitle1,
                    textAlign = TextAlign.Left,
                    modifier = Modifier
                        .padding(horizontal = 10.dp)
                        .padding(bottom = 5.dp, top = 5.dp)
                        .wrapContentWidth()
                        .wrapContentHeight()
                        .testTag("home_col_question_card_winning_option_name"),
                    color = colorResource(id = R.color.light_text),
                    overflow = TextOverflow.Ellipsis,
                    maxLines = 3
                )

                Spacer(Modifier.weight(1f))

                IconButton(
                    modifier = Modifier.testTag("home_col_question_card_size_button"),
                    onClick = { expanded = !expanded }) {
                    if (!expanded) {
                        Icon(
                            Icons.Default.KeyboardArrowDown,
                            contentDescription = "",
                            tint = colorResource(id = R.color.light_text)
...
            AnimatedVisibility(
                visible = expanded,
                enter = expandVertically(),
                exit = shrinkVertically()
            ) {

                Column(modifier = Modifier.testTag("home_question_card_detail_col")) {
                    Divider(modifier = Modifier.padding(vertical = 0.dp, horizontal = 5.dp))
                    Text(
                        text = stringResource(id = R.string.question_conditions_label),
                        style = MaterialTheme.typography.subtitle1,
                        textAlign = TextAlign.Left,
                        modifier = Modifier
...
