...
                    textColor = colorResource(id = R.color.light_text)
                ),
                label = { Text(text = stringResource(id = R.string.requisite_name)) },
                modifier = Modifier
                    .background(color = colorResource(id = R.color.white))
                    .weight(1f)
                    .testTag("conditions_control_name_text_field"),
                value = conditionName,
                singleLine = true,
                onValueChange = {
                    if (it.length < maxCharacters) {
                        conditionName = it
                        buttonEnabled = conditionName.isNotBlank()
...
                }
            }

            Button(
                modifier = Modifier
                    .size(50.dp)
                    .testTag("conditions_control_add_button"),
                enabled = buttonEnabled,
                colors = ButtonDefaults.buttonColors(
                    backgroundColor = colorResource(id = R.color.yellow_800),
                    disabledBackgroundColor = colorResource(id = R.color.disabled_button)
                ),
                onClick = {
...
